apply plugin: 'com.android.application'
apply plugin: 'com.google.gms.google-services'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-kapt'

ext {
    androidSupportLibraryVersion = "28.0.0"
}

android {
    compileSdk 35

    defaultConfig {
        configurations.all {
            resolutionStrategy {
                force 'com.android.billingclient:billing:6.2.1'
                force 'androidx.core:core-ktx:1.13.1'
                force 'androidx.core:core:1.13.1'
            }
        }
        applicationId 'com.skysoftlk.vpnapp'
        minSdkVersion 23
        targetSdkVersion 35
        versionCode 18
        versionName "18.0"

        multiDexEnabled true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        vectorDrawables.useSupportLibrary = true
    }

    buildFeatures {
        dataBinding true
        viewBinding true
        buildConfig true
    }

    buildTypes {
        release {
            lintOptions {
                disable 'MissingTranslation'
                checkReleaseBuilds false
                abortOnError false
            }

            debuggable false
            jniDebuggable false
            renderscriptDebuggable false
            pseudoLocalesEnabled false
            zipAlignEnabled true
            shrinkResources true
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            
            ndk {
                debugSymbolLevel 'FULL'
            }
        }
        debug {
        }
    }

    compileOptions {
        sourceCompatibility 17
        targetCompatibility 17
    }

    kotlinOptions {
        jvmTarget = "17"
    }

    packagingOptions {
        pickFirst '**/*.so'
        jniLibs {
            useLegacyPackaging = false
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.fork = true
        options.forkOptions.jvmArgs += [
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }

    namespace 'com.skysoftlk.vpnapp'
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"

    // AndroidX libraries
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.core:core-ktx:1.13.1'
    implementation 'androidx.startup:startup-runtime:1.1.1'
    implementation 'androidx.lifecycle:lifecycle-process:2.8.7'
    implementation 'androidx.annotation:annotation:1.7.1'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'

    // Network & Billing
    implementation 'com.android.volley:volley:1.2.1'
    implementation("com.android.billingclient:billing:6.2.1")
    implementation 'com.google.guava:guava:33.0.0-android'

    // UI Libraries
    def lottieVersion = '6.4.0'
    implementation "com.airbnb.android:lottie:$lottieVersion"
    implementation 'com.cardiomood.android:android-widgets:0.1.1'
    implementation 'com.etebarian:meow-bottom-navigation:1.2.0'

    // Ads
    implementation 'com.facebook.android:audience-network-sdk:6.16.0'
    implementation 'com.google.ads.mediation:facebook:6.16.0.0'
    implementation 'com.google.android.gms:play-services-ads:23.6.0'

    // Charts & Animations
    implementation 'com.github.anastr:speedviewlib:1.6.0'
    implementation 'com.github.bmarrdev:android-DecoView-charting:v1.2'

    // Work Manager
    def work_version = "2.9.1"
    implementation "androidx.work:work-runtime:$work_version"
    implementation "androidx.work:work-runtime-ktx:$work_version"

    // Image Loading
    implementation 'com.github.bumptech.glide:glide:4.16.0'
    kapt 'com.github.bumptech.glide:compiler:4.16.0'

    // Utility Libraries
    implementation 'com.github.daoibrahim:AdmobAdvancedNativeRecyclerview:1.0.0'
    implementation 'com.github.GrenderG:Toasty:1.5.2'
    implementation 'com.github.javiersantos:MaterialStyledDialogs:2.1'
    implementation 'com.github.oatrice:internet-speed-testing:1.0.1'
    implementation 'com.github.Shashank02051997:FancyAlertDialog-Android:0.1'
    implementation 'com.github.Shashank02051997:FancyGifDialog-Android:1.2'
    implementation 'com.google.android.material:material:1.12.0'

    // Play Store & Firebase
    implementation 'com.google.android.play:app-update:2.1.0'
    implementation 'com.google.android.play:app-update-ktx:2.1.0'
    implementation 'com.google.android.play:review:2.0.2'
    implementation 'com.google.android.play:review-ktx:2.0.2'
    implementation 'com.google.firebase:firebase-analytics:22.1.2'
    implementation 'com.google.firebase:firebase-database:22.0.1'
    implementation 'com.google.firebase:firebase-auth:24.1.0'

    // UI Components
    implementation 'com.infideap.drawerbehavior:drawer-behavior:1.0.4'
    implementation 'com.intuit.sdp:sdp-android:1.1.0'

    // Butterknife - FIXED VERSION
    implementation 'com.jakewharton:butterknife:10.2.3'  // Using stable version
    kapt 'com.jakewharton:butterknife-compiler:10.2.3'

    // Notifications
    implementation 'com.onesignal:OneSignal:5.9.0'

    // Other Utilities
    implementation 'com.pixplicity.easyprefs:library:1.9.0'
    implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
    implementation 'com.yarolegovich:lovely-dialog:1.1.0'
    implementation 'com.zys:brokenview:1.0.3'
    implementation 'devlight.io:navigationtabbar:1.2.5'
    implementation 'fr.bmartel:jspeedtest:1.32.1'
    implementation 'io.github.dreierf:material-intro-screen:0.0.6'
    implementation 'jp.wasabeef:recyclerview-animators:2.2.5'
    implementation 'me.itangqi.waveloadingview:library:0.3.5'
    implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
    implementation 'net.grandcentrix.tray:tray:0.12.0'
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.28'

    // Testing
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'

    // Conscrypt for modern SSL/TLS support on older devices and non-GMS devices
    implementation 'org.conscrypt:conscrypt-android:2.5.3'

    // OneConnect
    implementation 'com.github.oneconnectapi:OneConnectLib:v1.1.1'
    implementation 'com.github.gemeauxph:MaterialLoadingIndicator:v1.0.4'
}